update branch name and env var

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1230,7 +1230,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mdawn-toying-with-env-vars
 
       - integration_tests_mtls:
           requires:
@@ -1243,7 +1243,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mdawn-toying-with-env-vars
 
       - client_test:
           requires:
@@ -1251,7 +1251,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mdawn-toying-with-env-vars
 
       - server_test:
           requires:
@@ -1259,7 +1259,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mdawn-toying-with-env-vars
 
       - build_app:
           requires:
@@ -1298,21 +1298,21 @@ workflows:
             - build_app
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - deploy_exp_migrations:
           requires:
@@ -1326,28 +1326,28 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mdawn-toying-with-env-vars
 
       - push_app_stg:
           requires:
