--- a/config/env/exp.app.env
+++ b/config/env/exp.app.env
@@ -5,7 +5,7 @@ DB_NAME=app
 DB_PORT=5432
 DB_SSL_MODE=verify-full
 DEBUG_PPROF=false
-DEVLOCAL_AUTH=false
+DEVLOCAL_AUTH=true
 DOD_CA_PACKAGE=/config/tls/Certificates_PKCS7_v5.6_DoD.der.p7b
 EMAIL_BACKEND=ses
 FEATURE_FLAG_ACCESS_CODE=false
