--- a/cypress/Dockerfile.cypress
+++ b/cypress/Dockerfile.cypress
@@ -2,7 +2,7 @@ FROM cypress/base:12
 
 COPY package.json /package.json
 COPY yarn.lock /yarn.lock
-RUN yarn install --dev --silent
+RUN yarn install
 
 COPY . /cypress
 COPY cypress.json /cypress.json
