--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-viewport": "^6.1.10",
     "@storybook/addons": "^6.1.5",
+    "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^5.3.19",
     "@testing-library/react-hooks": "^3.7.0",
     "babel-loader": "8.1.0",
