--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "happo": "happo",
+    "happo-ci-github-actions": "happo-ci-github-actions",
     "happo-ci": "HAPPO_IS_ASYNC=true happo-ci-circleci",
     "spellcheck": "mdspell --ignore-numbers --ignore-acronyms --en-us --no-suggestions"
   },
