PR feedback: move optimistic locking check to outside trasaction, add minimum to payload field and general refactoring

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1696,6 +1696,8 @@ definitions:
       departmentIndicator:
         $ref: '#/definitions/DeptIndicator'
       authorizedWeight:
+        minimum: 1
+        description: unit is in lbs
         example: 2000
         type: integer
         x-formatting: weight
