TOO can change 'Dependents Authorized' in the allowances viewer

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1815,6 +1815,8 @@ definitions:
       agency:
         description: the branch that the service member belongs to
         $ref: '#/definitions/Branch'
+      entitlements:
+        $ref: '#/definitions/Entitlements'
     required:
       - issueDate
       - reportByDate
