--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1768,6 +1768,8 @@ definitions:
         x-nullable: true
       grade:
         $ref: '#/definitions/Grade'
+      entitlements:
+        $ref: '#/definitions/Entitlements'
     required:
       - issueDate
       - reportByDate
