Fixed overwriting of order type detail when providing a payload that did not have one

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1616,6 +1616,7 @@ definitions:
   OrdersTypeDetail:
     type: string
     title: Orders type detail
+    x-nullable: true
     enum:
       - HHG_PERMITTED
       - PCS_TDY
