--- a/.github/workflows/happo-tests.yml
+++ b/.github/workflows/happo-tests.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Set up node
         uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - name: Install dependencies
         run: yarn install
