--- a/.github/workflows/happo-tests-master.yml
+++ b/.github/workflows/happo-tests-master.yml
@@ -1,28 +1,11 @@
 name: Happo CI
 
 on:
-  pull_request:
-    branches: [master]
+  push:
+    branches: [master, sr-happo-fix-gh]
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    outputs:
-      frontend: ${{ steps.filter.outputs.frontend }}
-    steps:
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            frontend:
-              - 'src/**'
-              - '.storybook/**'
-              - '.happo.js'
-              - 'yarn.lock'
-
   happo:
-    needs: changes
-    if: ${{ needs.changes.outputs.frontend == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
