update service member affiliation with move orders branch selection

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1510,7 +1510,6 @@ definitions:
     type: object
   Branch:
     type: string
-    x-nullable: true
     title: branch
     enum:
       - ARMY
@@ -1706,6 +1705,7 @@ definitions:
       agency:
         type: string
         example: civilian
+        $ref: '#/definitions/Branch'
       entitlement:
         $ref: '#/definitions/Entitlements'
       destinationDutyStation:
@@ -1815,7 +1815,8 @@ definitions:
         x-nullable: true
       grade:
         $ref: '#/definitions/Grade'
-      branch:
+      agency:
+        description: the branch that the service member belongs to
         $ref: '#/definitions/Branch'
       dependentsAuthorized:
         type: boolean
@@ -1826,6 +1827,7 @@ definitions:
       - ordersType
       - newDutyStationId
       - originDutyStationId
+      - agency
   MoveTaskOrder:
     properties:
       id:
