--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -13,6 +13,7 @@ schemes:
   - http
 tags:
   - name: queues
+  - name: move
 paths:
   '/customer/{customerID}':
     parameters:
@@ -92,7 +93,7 @@ paths:
             $ref: '#/responses/ServerError'
       tags:
         - move
-      description: Returns a given move
+      description: Returns a given move for a unique alphanumeric locator string
       summary: Returns a given move
       operationId: getMove
   '/move-orders/{moveOrderID}':
@@ -1575,19 +1576,45 @@ definitions:
         example: 1f2270c7-7166-40ae-981e-b200ebdf3054
         format: uuid
         type: string
-      orders_id:
+      availableToPrimeAt:
+        format: date-time
+        type: string
+        x-nullable: true
+      contractorId:
+        type: string
+        format: uuid
+        x-nullable: true
+      locator:
+        type: string
+        example: '1K43AR'
+      ordersId:
         type: string
         format: uuid
         example: c56a4180-65aa-42ec-a945-5fd21dec0538
-      locator:
+      referenceId:
+        example: 1001-3456
         type: string
-        example: '1K43A'
-      created_at:
+        x-nullable: true
+      status:
+        $ref: '#/definitions/MoveStatus'
+      createdAt:
         type: string
         format: date-time
-      updated_at:
+      submittedAt:
         type: string
         format: date-time
+        x-nullable: true
+      updatedAt:
+        type: string
+        format: date-time
+  MoveStatus:
+    type: string
+    enum:
+      - DRAFT
+      - SUBMITTED
+      - APPROVALS REQUESTED
+      - APPROVED
+      - CANCELED
   DeptIndicator:
     type: string
     title: Dept. indicator
