--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -900,6 +900,7 @@ definitions:
         example: c56a4180-65aa-42ec-a945-5fd21dec0538
         format: uuid
         type: string
+        x-nullable: true
       entitlement:
         $ref: '#/definitions/Entitlement'
       destinationDutyStation:
