--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -62,7 +62,7 @@ paths:
       summary: createMoveTaskOrder
       description: |
         Creates an instance of moveTaskOrder.
-        Current this will also create a number of nested objects but not all.
+        Currently this will also create a number of nested objects but not all.
         It will currently create
         * MoveTaskOrder
         * MoveOrder
@@ -131,8 +131,6 @@ paths:
           description: Successfully retrieve an individual move task order.
           schema:
             $ref: '#/definitions/MoveTaskOrder'
-        '400':
-          $ref: '#/responses/InvalidRequest'
         '401':
           $ref: '#/responses/PermissionDenied'
         '403':
