drop confirmation_number column, replace with move locator code in payloads

--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -974,10 +974,9 @@ definitions:
       reportByDate:
         type: string
         format: date
-      confirmationNumber:
+      moveCode:
         type: string
         example: 'HYXFJF'
-        x-nullable: true
       orderNumber:
         type: string
       linesOfAccounting:
