--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1687,9 +1687,9 @@ definitions:
         example: c56a4180-65aa-42ec-a945-5fd21dec0538
         format: uuid
         type: string
-      confirmation_number:
-        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+      moveCode:
         type: string
+        example: 'H2XFJF'
       first_name:
         type: string
         example: John
