Add moveCode to move task order for prime instead of move order payload

--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -974,9 +974,6 @@ definitions:
       reportByDate:
         type: string
         format: date
-      moveCode:
-        type: string
-        example: 'HYXFJF'
       orderNumber:
         type: string
       linesOfAccounting:
@@ -996,6 +993,9 @@ definitions:
         example: 1f2270c7-7166-40ae-981e-b200ebdf3054
         format: uuid
         type: string
+      moveCode:
+        type: string
+        example: 'HYXFJF'
       createdAt:
         format: date-time
         type: string
@@ -1286,7 +1286,7 @@ definitions:
           sitPostalCode:
             type: string
             format: zip
-            example: "90210"
+            example: '90210'
             pattern: '^(\d{5}([\-]\d{4})?)$'
           sitEntryDate:
             format: date
@@ -1462,7 +1462,7 @@ definitions:
       status:
         $ref: '#/definitions/PaymentRequestStatus'
       paymentRequestNumber:
-        example: "1234-5678-1"
+        example: '1234-5678-1'
         readOnly: true
         type: string
       proofOfServiceDocs:
@@ -1536,7 +1536,7 @@ definitions:
       key:
         $ref: '#/definitions/ServiceItemParamName'
       value:
-        example: "3025"
+        example: '3025'
         type: string
       type:
         $ref: '#/definitions/ServiceItemParamType'
@@ -1810,7 +1810,7 @@ responses:
     schema:
       $ref: '#/definitions/ClientError'
   Conflict:
-    description: "The request could not be processed because of conflict in the current state of the resource."
+    description: 'The request could not be processed because of conflict in the current state of the resource.'
     schema:
       $ref: '#/definitions/ClientError'
   PermissionDenied:
