--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1988,6 +1988,9 @@ definitions:
         example: c56a4180-65aa-42ec-a945-5fd21dec0538
         format: uuid
         type: string
+      mtoServiceItemName:
+        example: Shipment Mgmt. Services
+        type: string
       status:
         $ref: '#/definitions/PaymentServiceItemStatus'
       priceCents:
