--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -1482,6 +1482,7 @@ definitions:
     enum:
       - PENDING
       - REVIEWED
+      - REVIEWED_AND_ALL_SERVICE_ITEMS_REJECTED
       - SENT_TO_GEX
       - RECEIVED_BY_GEX
       - PAID
