--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -784,6 +784,9 @@ definitions:
         format: date
         type: string
         description: The date the customer requested that this shipment be picked up.
+      primeEstimatedWeight:
+        type: integer
+        example: 4500
       customerRemarks:
         type: string
         example: handle with care
