--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -1027,6 +1027,7 @@ definitions:
       isCanceled:
         type: boolean
         x-nullable: true
+        readOnly: true
         description: Indicated this MoveTaskOrder has been canceled.
       contractorID:
         type: string
