--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ version: '2.1'
 
 # References for variables shared across the file
 references:
-  circleci-docker: &circleci-docker milmove/circleci-docker:milmove-app-cac7853bc4f932a2d189bc8d1a829443135f3488
+  circleci-docker: &circleci-docker milmove/circleci-docker:milmove-app-2c832f32e8dbd8afaaa5265e9c6ff59e8d536d11
 
   postgres: &postgres postgres:12.2
 
@@ -1282,7 +1282,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mb-5838-use-upstream-ecs-service-logs
 
       - integration_tests_mtls:
           requires:
@@ -1295,7 +1295,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mb-5838-use-upstream-ecs-service-logs
 
       - client_test:
           requires:
@@ -1303,7 +1303,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mb-5838-use-upstream-ecs-service-logs
 
       - server_test:
           requires:
@@ -1311,7 +1311,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mb-5838-use-upstream-ecs-service-logs
 
       - webhook_client_test:
           requires:
@@ -1359,28 +1359,28 @@ workflows:
             - build_app
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - push_webhook_client_exp:
           requires:
             - build_webhook_client
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - deploy_exp_migrations:
           requires:
@@ -1394,28 +1394,28 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mb-5838-use-upstream-ecs-service-logs
 
       - push_app_stg:
           requires:
