--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1394,7 +1394,7 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: placeholder_branch_name
+              only: cj-crud-role
 
       - deploy_exp_tasks:
           requires:
