push_migrations_exp is required when running migrations

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1366,7 +1366,7 @@ workflows:
             - build_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: cj-crud-role
 
       - push_tasks_exp:
           requires:
