--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -1073,6 +1073,7 @@ definitions:
         example: ABC123
         readOnly: true
   MoveTaskOrderID:
+    example: 1f2270c7-7166-40ae-981e-b200ebdf3054
     format: uuid
     type: string
   MoveTaskOrderIDs:
