Revert "test the migration"
This reverts commit d2d269b2c74938755cf3e30c576810f245b1a777.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1366,7 +1366,7 @@ workflows:
             - build_migrations
           filters:
             branches:
-              only: cj-fix-local-ecs-user
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
@@ -1394,7 +1394,7 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: cj-fix-local-ecs-user
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
