--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1366,7 +1366,7 @@ workflows:
             - build_migrations
           filters:
             branches:
-              only: cj-pg-local
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
@@ -1394,7 +1394,7 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: cj-pg-local
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
