[MB-4758] Add reviewed all rejected status for payment request in backend (#5587)
* add reviewed all rejected pr status in ghc api, model, db enum type, schemaspy comments

* add rejected status to prime and support payment request enum

* update expected model validation error message

* add test to verify reviewed rejected is excluded from PaymentRequestReviewedFetcher

* rejected payment request processor test does not send to gex

--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -1343,6 +1343,7 @@ definitions:
     enum:
       - PENDING
       - REVIEWED
+      - REVIEWED_AND_ALL_SERVICE_ITEMS_REJECTED
       - SENT_TO_GEX
       - RECEIVED_BY_GEX
       - PAID
