--- a/.github/workflows/analyze-bundle.yml
+++ b/.github/workflows/analyze-bundle.yml
@@ -67,17 +67,13 @@ jobs:
     needs: [build-head, build-base]
     steps:
       - uses: actions/checkout@v2
-      - name: Download base artifact
+      - name: Download artifacts
         uses: actions/download-artifact@v2
-        with:
-          name: base-stats
-      - name: Download head artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: head-stats
+      - name: Display structure of downloaded files
+        run: ls -R
       - name: Diff between base & head
-        uses: chronotruck/webpack-stats-diff-action@1.0.0
+        uses: chronotruck/webpack-stats-diff-action@1.1.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           base_stats_path: ./base-stats/stats.json
           head_stats_path: ./head-stats/stats.json
+          token: ${{ secrets.GITHUB_TOKEN }}
