Add Entitlement Weight to Orders Definition
- add the DBAuthorizedWeight to the Orders definition and the yaml
- set up MoveInfo to take in a dynamic value

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -2190,6 +2190,9 @@ definitions:
         x-nullable: true
       department_indicator:
         $ref: '#/definitions/DeptIndicator'
+      dBAuthorizedWeight:
+        type: integer
+        example: 7000
     required:
       - id
       - service_member_id
