Add Entitlement Weight Value to Payload
- add the entitlement weight value to the payload and null safety check it
- read in entitlement weight value and display on the move 101 screen

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -2193,6 +2193,7 @@ definitions:
       dBAuthorizedWeight:
         type: integer
         example: 7000
+        x-nullable: true
     required:
       - id
       - service_member_id
