--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "query-string": "6",
     "ra-data-simple-rest": "^3.10.4",
     "ra-language-english": "^3.11.2",
-    "react": "^16.14.0",
+    "react": "^17.0.1",
     "react-admin": "^3.11.2",
     "react-app-polyfill": "^2.0.0",
     "react-day-picker": "=7.4.8",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.1",
     "react-filepond": "^4.0.0",
     "react-form": "^4.0.1",
     "react-highlight-words": "^0.16.0",
@@ -124,6 +124,7 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.10",
     "@testing-library/react-hooks": "^4.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "babel-loader": "8.1.0",
     "cypress": "^6.2.1",
     "cypress-audit": "^0.3.0",
@@ -132,7 +133,6 @@
     "danger-plugin-jira-issue": "^1.4.1",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-no-only-tests": "^2.4.0",
@@ -147,7 +147,7 @@
     "mime-types": "^2.1.28",
     "mockdate": "^3.0.2",
     "prettier": "2.2.1",
-    "react-test-renderer": "^16.14.0",
+    "react-test-renderer": "^17.0.1",
     "source-map-explorer": "^2.5.2",
     "storybook-addons-abstract": "^5.0.6"
   },
