Revert "deploy the migration to experimental"
This reverts commit 92b494f32836373eaf93e7e3e3d4f6bede2a5ad8.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1394,7 +1394,7 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: cj-crud-role
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
