Revert "push_migrations_exp is required when running migrations"
This reverts commit f9812ea1423b1fd987d65452db2a36a4d3660a36.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1366,7 +1366,7 @@ workflows:
             - build_migrations
           filters:
             branches:
-              only: cj-crud-role
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
