FE - TIO can put payment request in status that ensures not sent to GEX

--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -270,7 +270,7 @@ paths:
     patch:
       summary: updatePaymentRequestStatus
       description: |
-        Updates status of a payment request to REVIEWED, SENT_TO_GEX, RECEIVED_BY_GEX, or PAID.
+        Updates status of a payment request to REVIEWED, SENT_TO_GEX, RECEIVED_BY_GEX, REVIEWED_AND_ALL_SERVICE_ITEMS_REJECTED, or PAID.
 
         A status of REVIEWED can optionally have a `rejectionReason`.
 
@@ -1330,7 +1330,7 @@ definitions:
           sitPostalCode:
             type: string
             format: zip
-            example: "90210"
+            example: '90210'
             pattern: '^(\d{5}([\-]\d{4})?)$'
           sitEntryDate:
             format: date
