--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1191,6 +1191,7 @@ paths:
             enum:
               - Payment requested
               - Reviewed
+              - Rejected
               - Paid
       responses:
         '200':
