add new definition to yaml

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -136,6 +136,49 @@ definitions:
     type: array
     items:
       $ref: '#/definitions/OfficeUser'
+  CustomerUser:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uuid
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+      firstName:
+        type: string
+      lastName:
+        type: string
+      email:
+        type: string
+        format: x-email
+        pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
+      userId:
+        type: string
+        format: uuid
+      organizationId:
+        type: string
+        format: uuid
+      active:
+        type: boolean
+      createdAt:
+        type: string
+        format: date-time
+      updatedAt:
+        type: string
+        format: date-time
+    required:
+      - id
+      - firstName
+      - lastName
+      - email
+      - userId
+      - organizationId
+      - active
+      - createdAt
+      - updatedAt
+  CustomerUsers:
+    type: array
+    items:
+      $ref: '#/definitions/CustomerUser'
   AdminUser:
     type: object
     properties:
@@ -860,6 +903,48 @@ paths:
           description: request requires user authentication
         404:
           description: access codes not found
+        500:
+          description: server error
+  /customer_users:
+    get:
+      summary: List customers
+      description: Returns a list of customers
+      operationId: indexCustomerUsers
+      tags:
+        - customer_users
+      parameters:
+        - in: query
+          name: filter
+          type: array
+          items:
+            type: string
+        - in: query
+          name: page
+          type: integer
+        - in: query
+          name: perPage
+          type: integer
+        - in: query
+          name: sort
+          type: string
+        - in: query
+          name: order
+          type: boolean
+      responses:
+        200:
+          description: success
+          headers:
+            Content-Range:
+              type: string
+              description: Used for pagination
+          schema:
+            $ref: '#/definitions/CustomerUsers'
+        400:
+          description: invalid request
+        401:
+          description: request requires user authentication
+        404:
+          description: customer users not found
         500:
           description: server error
   /office_users:
