Rename dbAuthorizedWeight to AuthorizedWeight and Fix Test
- rename dbAuthorizedWeight to authorizedWeight
- fix the TestMoveOrderUpdater to check that it is not updated by making sure it is not set to the updated value

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -2190,7 +2190,7 @@ definitions:
         x-nullable: true
       department_indicator:
         $ref: '#/definitions/DeptIndicator'
-      dBAuthorizedWeight:
+      authorizedWeight:
         type: integer
         example: 7000
         x-nullable: true
