use the low privileged role during unit tests

--- a/.envrc
+++ b/.envrc
@@ -111,8 +111,10 @@ export MIGRATION_MANIFEST="${MYMOVE_DIR}/migrations/app/migrations_manifest.txt"
 
 # Default DB configuration
 export DB_PASSWORD=mysecretpassword
+export DB_PASSWORD_LOW_PRIV=mysecretpassword
 export PGPASSWORD=$DB_PASSWORD
 export DB_USER=postgres
+export DB_USER_LOW_PRIV=crud
 export DB_HOST=localhost
 export DB_PORT=5432
 export DB_PORT_DEPLOYED_MIGRATIONS=5434
