--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -2331,6 +2331,10 @@ definitions:
         type: string
         example: MTO Shipment not good enough
         x-nullable: true
+      mtoAgents:
+        $ref: '#/definitions/MTOAgents'
+      mtoServiceItems:
+        $ref: '#/definitions/MTOServiceItems'
       eTag:
         type: string
   MTOShipments:
