eager load customer address and backup contact, add service items and agents to hook payload test

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1699,6 +1699,10 @@ definitions:
         example: 1f2270c7-7166-40ae-981e-b200ebdf3054
         format: uuid
         type: string
+      customerID:
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+        format: uuid
+        type: string
       customer:
         $ref: '#/definitions/Customer'
       moveCode:
