Rename ZipSITAddress to ZipSITDestHHGFinalAddress and update descriptions

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -2205,7 +2205,7 @@ definitions:
       - WeightEstimated
       - ZipDestAddress
       - ZipPickupAddress
-      - ZipSITAddress
+      - ZipSITDestHHGFinalAddress
   ServiceItemParamOrigin:
     type: string
     enum:
