--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -1712,7 +1712,7 @@ definitions:
       - WeightEstimated
       - ZipDestAddress
       - ZipPickupAddress
-      - ZipSITAddress
+      - ZipSITDestHHGFinalAddress
   ServiceItemParamOrigin:
     type: string
     enum:
