--- a/config/env/exp.orders.env
+++ b/config/env/exp.orders.env
@@ -3,7 +3,7 @@ DB_NAME=app
 DB_PORT=5432
 DB_SSL_MODE=verify-full
 DB_SSL_ROOT_CERT=/bin/rds-ca-us-gov-west-1-2017-root.pem
-DB_USER=ecs_user
+DB_USER=crud
 DEBUG_LOGGING=true
 DOD_CA_PACKAGE=/config/tls/Certificates_PKCS7_v5.6_DoD.der.p7b
 DOMAIN=exp.move.mil
