Adding sit distance at destination lookup; still needs tests and some changes from other in-progress PRs

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -2165,8 +2165,8 @@ definitions:
       - CubicFeetCrating
       - DistanceZip3
       - DistanceZip5
-      - DistanceZip5SITDest
-      - DistanceZip5SITOrigin
+      - DistanceZipSITDest
+      - DistanceZipSITOrigin
       - EIAFuelPrice
       - FSCWeightBasedDistanceMultiplier
       - MarketDest
