--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -1666,8 +1666,8 @@ definitions:
       - CubicFeetCrating
       - DistanceZip3
       - DistanceZip5
-      - DistanceZip5SITDest
-      - DistanceZip5SITOrigin
+      - DistanceZipSITDest
+      - DistanceZipSITOrigin
       - EIAFuelPrice
       - FSCWeightBasedDistanceMultiplier
       - MarketDest
