Yan MB-6163 Dynamic Weight Allowance On the Move 101 (#5657)
* Add Entitlement Weight to Orders Definition

- add the DBAuthorizedWeight to the Orders definition and the yaml
- set up MoveInfo to take in a dynamic value

* Add Entitlement Weight Value to Payload

- add the entitlement weight value to the payload and null safety check it
- read in entitlement weight value and display on the move 101 screen

* Add Authorized Weight to the Make Entitlement and Remove Alert if No Authorized Weight

- add the authorized weight to make entitlement
- remove the alert if there is no authorized weight

* Add Entitlement to Service Member Orders, Componentize MovingInfo, Update Tests

- add the entitlement to the payload for service member orders
- change MovingInfo to a component to use fetchLatestOrders
- update MovingInfo tests

* Update Orders Test

- update orders_test.go TestCreateOrder to check for the DBAuthorizedWeight

* Change MovingInfo to Not Use bindActionCreators and Use selectCurrentOrders

- modify mapDispatchToProps to be an object instead of a function so that bindActionCreators doesn't need to be used
- use selectCurrentOrders instead of selectOrdersForMove so that the moveId and withRouter can be removed

* Rename dbAuthorizedWeight to AuthorizedWeight and Fix Test

- rename dbAuthorizedWeight to authorizedWeight
- fix the TestMoveOrderUpdater to check that it is not updated by making sure it is not set to the updated value

* Update MovingInfo Test to Check For No Entitlement Weight

- update the MovingInfo test to check for the case when there is no entitlement weight
- update the alert in MovingInfo to have a test data id to query by

* Re-add Nil Check

- add back in a removed nil check

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -2190,6 +2190,10 @@ definitions:
         x-nullable: true
       department_indicator:
         $ref: '#/definitions/DeptIndicator'
+      authorizedWeight:
+        type: integer
+        example: 7000
+        x-nullable: true
     required:
       - id
       - service_member_id
